# stratarag

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: ANNOUNCEMENT.md
examples/: 01_quickstart.py  02_production_pipeline.py  03_tools_async_streaming.py  04_eval_harness.py  05_playground_ui.py  06_multimodal_graphrag.py  07_all_architectures.py  08_multi_agent_orchestration.py
npm-placeholder/: README.md  index.js  package.json
stratarag/: __init__.py  agent.py  cloud.py  errors.py  graph.py  knowledge.py  orchestration.py  recipes.py  tools.py  types.py
stratarag/chunking/: __init__.py  base.py  modality.py  strategies.py
stratarag/dashboard/: page.py  server.py
stratarag/embeddings/: __init__.py  base.py  hashing.py  providers.py  sbert.py
stratarag/evals/: __init__.py  harness.py
stratarag/llm/: __init__.py  anthropic.py  base.py  echo.py
stratarag/memory/: __init__.py  extractors.py  modules.py
stratarag/pipeline/: __init__.py  advanced.py  base.py  rerankers.py  rewrite.py  stages.py
stratarag/stores/: __init__.py  adapters.py  adapters2.py  base.py  local.py
tests/: test_agent.py  test_architectures.py  test_chunking.py  test_dashboard.py  test_evals_and_optional.py  test_memory.py  test_multimodal_graph.py  test_orchestration.py  test_regressions.py  test_stores_knowledge.py  test_tools_pipeline.py
